# selecta

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Bla.md  CLAUDE.md  CLIENT_INTEGRATION_NOTES.md  CODE_INDEX.md  DATABASE.md  DB_REFACTOR.md  DB_REFACTOR_IMPLEMENTATION.md  MIGRATION_GUIDE.md  PLATFORM_TESTING_SAFETY.md  PLAYER_README.md  README.md  REFACTORING-SUMMARY.md  SESSION_RULES.md  SYNC_REFACTOR_PLAN.md  SYNC_UI_IMPLEMENTATION_PLAN.md  TYPING_GUIDELINES.md  YOUTUBE-INTEGRATION.md  cache_refactor.md  project_structure.txt  pyproject.toml  test_selecta.db
python/: pyproject.toml
python/src/selecta/api/: api_client.py  auth_token.py
python/src/selecta/utils/: dummy_mp3.py
resources/: README.md
resources/kv/: base_style.kv
resources/kv/widgets/: platform_auth.kv
scripts/: dev_setup.sh  fix_install.sh  generate_completion.sh  init_test_db.py  query_test_db.py  setup_test_environment.py  test_cross_platform_sync.py  test_platform_basics.py  test_playlist_track_operations.py
scripts/python/: add_test_data.py  add_tracks_to_playlists.py  check_platform_metadata.py  debug_rekordbox_import.py  debug_spotify_import.py  debug_youtube_playlists.py  test_rekordbox_bpm.py  test_youtube_auth.py  test_youtube_platform.py  test_youtube_player.py  test_youtube_sync.py
scripts/python/database/: init_test_db.py  query_test_db.py
scripts/python/discogs/: debug_client.py  test_auth.py  test_direct_api.py
scripts/python/rekordbox/: test_auth.py
scripts/python/spotify/: test_auth.py
src/selecta/: MODULE_README_TEMPLATE.md  README.md  __main__.py  app.py
src/selecta/cli/: README.md  __init__.py  database.py  discogs.py  env.py  integration_test.py  main.py  rekordbox.py  spotify.py  test.py
src/selecta/cli/dev/: database.py
src/selecta/config/: README.md  config_manager.py
src/selecta/core/data/: README.md  __init__.py  database.py  init_db.py  types.py
src/selecta/core/data/migrations/: README.md  env.py
src/selecta/core/data/models/: README.md  __init__.py  album.py  credentials.py  db.py  genre.py  playlist.py  settings.py  tag.py  track.py  vinyl.py
src/selecta/core/data/repositories/: README.md  __init__.py  image_repository.py  playlist_repository.py  settings_repository.py  tag_repository.py  track_repository.py  vinyl_repository.py
src/selecta/core/platform/: README.md  abstract_platform.py  link_manager.py  platform_factory.py  sync_manager.py
src/selecta/core/platform/discogs/: README.md  api_client.py  auth.py  client.py  models.py
src/selecta/core/platform/rekordbox/: README.md  auth.py  client.py  models.py
src/selecta/core/platform/spotify/: README.md  auth.py  client.py  models.py
src/selecta/core/platform/youtube/: README.md  auth.py  client.py  models.py  sync.py
src/selecta/core/testing/: __init__.py  safe_platform_tester.py  safety_guard.py
src/selecta/core/utils/: README.md  audio_player.py  cache_manager.py  duplicate_detector.py  folder_scanner.py  loading.py  metadata_extractor.py  path_helper.py  type_helpers.py  worker.py
src/selecta/data/: __init__.py  database.py  init_db.py
src/selecta/data/migrations/: __init__.py  env.py
src/selecta/data/models/: __init__.py  album.py  credentials.py  genre.py  playlist.py  settings.py  tag.py  track.py  vinyl.py
src/selecta/data/repositories/: __init__.py  playlist_repository.py  settings_repository.py  tag_repository.py  track_repository.py  vinyl_repository.py
src/selecta/gui/: authentication_view.py
src/selecta/gui/widgets/: platform_auth.py  platform_indicators.py
src/selecta/platform/: abstract_platform.py  platform_factory.py
src/selecta/platform/discogs/: auth.py  client.py  models.py
src/selecta/platform/rekordbox/: auth.py  client.py  models.py
src/selecta/platform/spotify/: auth.py  client.py  models.py
src/selecta/ui/: README.md  app.py  create_playlist_dialog.py  import_covers_dialog.py  import_export_playlist_dialog.py  import_rekordbox_dialog.py
src/selecta/ui/components/: README.md  __init__.py  audio_player_component.py  bottom_content.py  dynamic_content.py  folder_selection_widget.py  image_loader.py  loading_widget.py  main_content.py  navigation_bar.py  platform_auth_panel.py  platform_auth_widget.py  platform_search_panel.py  playlist_content.py  search_bar.py  selection_state.py  side_drawer.py
src/selecta/ui/components/auth/: __init__.py  platform_auth_panel.py
src/selecta/ui/components/common/: __init__.py  image_loader.py  selection_state.py
src/selecta/ui/components/discogs/: __init__.py  discogs_search_panel.py  discogs_track_item.py
src/selecta/ui/components/player/: __init__.py  audio_player.py  audio_player_component.py
src/selecta/ui/components/playlist/: README.md  __init__.py  abstract_playlist_data_provider.py  base_items.py  cache_manager.py  interfaces.py  local_playlist_data_provider.py  local_playlist_item.py  local_track_item.py  platform_icon_delegate.py  playlist_component.py  playlist_data_provider.py  playlist_icon_delegate.py  playlist_item.py  playlist_tree_model.py  track_details_panel.py  track_image_delegate.py  track_item.py  track_quality_delegate.py  tracks_table_model.py
src/selecta/ui/dialogs/: README.md  __init__.py  collection_management_dialog.py  cover_selection_dialog.py  create_playlist_dialog.py  import_covers_dialog.py  import_export_playlist_dialog.py  import_rekordbox_dialog.py  sync_preview_dialog.py
src/selecta/ui/themes/: README.md  style.py  theme_manager.py
src/selecta/ui/widgets/: README.md  __init__.py  folder_selection_widget.py  loading_widget.py  platform_auth.py  search_bar.py
src/selecta/utils/: path_helper.py  type_helpers.py
src/tests/: test_basic_platform.py  test_bidirectional_sync.py  test_collection_sync.py
src/tests/platform/: README.md  __init__.py
src/tests/platform/discogs/: __init__.py
src/tests/platform/integration/: __init__.py  conftest.py  test_cross_platform_workflows.py  test_real_authentication.py
src/tests/platform/rekordbox/: __init__.py
src/tests/platform/spotify/: __init__.py
src/tests/platform/youtube/: __init__.py
(+95 files in other folders)
