[project]
name = "selecta"
version = "0.0.0"
description = "Selecta stuff"
authors = [{ name = "Lorenz Häusler", email = "Haeusler.Lorenz@gmail.com" }]
dependencies = ["ruff", "httpx", "pydub", "mutagen", "numpy"]
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/selecta"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "N",  # pep8-naming
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
